# capsule

./: .env  .gitignore  AGENTS.md  BUGS.md  Cargo.toml  README.md  dev.sh  docker-compose.observal.yml
docker/: Dockerfile
frontend/: index.html  package-lock.json  package.json  server.js  test.html  vite.config.js
frontend/src/: App.svelte  Editor.svelte  Landing.svelte  Terminal.svelte  Traces.svelte  Workspace.svelte  styles.css  ws.js
runtime/: Cargo.toml
runtime/src/: api.rs  docker.rs  free_keys.rs  lib.rs  main.rs  observal.rs  pty.rs  session.rs  websocket.rs
